# dns-cloudflare-mpy

./: .ampy  .gitignore  README.md  logo.kra  pyproject.toml
data/: index.html
src/: boot.py  config.py  diag.py  dns_updater.py  log.py  main.py  pins.py  server.py  timesync.py  wifi_manager.py
src/data/: app.js  index.html  logo.png~
