[project]
name = "dns-cloudflare-mpy"
version = "0.1.0"
description = "A Micropython implementation to update cloudflare DNS records using an ESP32"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mpremote >=1.28.0",
    "esptool>=4.10.0",
]

[tool.distutils.egg_info]
egg_base = "target"